--- a/index.html
+++ b/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
-<body>
-
-</body>
+  <body>
+    <script type="text/javascript">
+	    var d = new Date();
+	    if (d.getMinutes() == 50)
+      {
+        var passwd = Math.floor(Math.random() * 8999) + 1000;
+        document.write(passwd);
+      }
+    </script>
+  </body>
 </html>
